--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     flex-flow: column;
     color: #fff;
     font: normal 14px Roboto, sans-serif;
-    background-color: #282a36;
+    background-color: #080808;
 }
 * {
     font-variant-ligatures: none;
